# sensor-data-ingest-mqtt-dev

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: conf.py
sensor_data_ingest_mqtt_dev/: __init__.py  _version.py  mqtt_dev.py  topic_config.py
tests/: test_sensor_data_ingest_mqtt_dev.py
