[metadata]
name = sensor-data-intest-mqtt-dev
description = A test of AWS IoT MQTT Python SDK
author = Micah Wengren
author_email = micah.wengren@gmail.com
url = https://github.com/mwengren/sensor-data-ingest-mqtt-dev
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = False
install_requires =
    numpy
    requests
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    mqtt_pub = sensor_data_ingest_mqtt_dev.mqtt_dev:mqtt_pub
    mqtt_sub = sensor_data_ingest_mqtt_dev.mqtt_dev:mqtt_sub

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = sensor_data_ingest_mqtt_dev/_version.py
